# sf2_xt

./: Cargo.toml
crates/impl-cli/: Cargo.toml
crates/impl-gui/: Cargo.toml
crates/impl-gui/src/: main.rs
crates/midi-defs/: Cargo.toml
crates/midi-defs/src/: lib.rs
crates/parser-riff/: Cargo.toml
crates/parser-riff/src/: error.rs  raw_chunk.rs  riff_chunk.rs
crates/parser-sf2/: Cargo.toml
crates/parser-sf2/src/: error.rs  lib.rs  sf2_info.rs  sf2_instrument.rs  sf2_instrument_generator.rs  sf2_instrument_header.rs  sf2_instrument_modulator.rs  sf2_instrument_zone.rs  sf2_preset_generator.rs  sf2_preset_header.rs  sf2_preset_modulator.rs  sf2_preset_zone.rs  sf2_sample.rs  sf2_sample_header.rs  sf2_soundfont.rs  sf2_version.rs  utils.rs
crates/sf2_xt_cli/: Cargo.toml
crates/sf2_xt_gui/: Cargo.toml
crates/sf2_xt_gui/src/: main.rs
crates/sf2_xt_lib/: Cargo.toml
crates/sf2_xt_lib/src/: gm.rs  lib.rs
crates/sf2_xt_lib/src/riff/: error.rs  mod.rs
crates/sf2_xt_lib/src/sf2/: error.rs  mod.rs  sf2_info.rs  sf2_instrument.rs  sf2_preset_header.rs  sf2_sample.rs  sf2_soundfont.rs
sf2_cli/: Cargo.toml
sf2_gui/: Cargo.toml
sf2_gui/src/: main.rs
sf2_lib/: Cargo.toml
sf2_lib/src/: sf2.rs
sf2_xt_cli/: Cargo.toml
sf2_xt_gui/: Cargo.toml
sf2_xt_gui/src/: main.rs
sf2_xt_lib/: Cargo.toml
sf2_xt_lib/src/: lib.rs
sf2_xt_lib/src/riff/: raw_chunk.rs  riff_chunk.rs
sf2_xt_lib/src/sf2/: error.rs  mod.rs  record_iterator.rs  sf2_info.rs  sf2_instrument.rs  sf2_preset_header.rs  sf2_sample.rs  sf2_soundfont.rs  sf2_version.rs  utils.rs
src/: main.rs  riff.rs
src/lib/: gm.rs  lib.rs  riff.rs  sf2.rs  std_ext.rs
