[workspace.package]
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
repository = "https://github.com/xTibor/sf2_xt"
homepage = "https://github.com/xTibor/sf2_xt"
license = "MIT"
edition = "2021"
rust-version = "1.76"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/sf2_xt_cli",
    "crates/sf2_xt_gui",
    "crates/sf2_xt_lib",
]

[workspace.dependencies]
sf2_xt_lib = { path = "crates/sf2_xt_lib" }

# common workspace dependencies
itertools = { version = "0.12.0" }
memmap    = { version = "0.7.0"  }
