[workspace.package]
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
repository = "https://github.com/xTibor/sf2_xt"
homepage = "https://github.com/xTibor/sf2_xt"
license = "MIT"
edition = "2021"
rust-version = "1.76"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/parser-riff",
    "crates/parser-sf2",
    "crates/midi-defs",

    "crates/impl-cli",
    "crates/impl-gui",
]

[workspace.dependencies]
parser-riff = { path = "crates/parser-riff" }
parser-sf2  = { path = "crates/parser-sf2"  }
midi-defs   = { path = "crates/midi-defs"  }

# common workspace dependencies
derive_more = { version = "0.99.17", features = ["display", "error", "from"], default-features = false }
itertools   = { version = "0.12.0" }
memmap      = { version = "0.7.0"  }
strum       = { version = "0.25.0", features = ["derive"] }
zerocopy    = { version = "0.7.31", features = ["derive"] }
