[package]
name = "sf2_cli"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "Command-line tools for SoundFont files"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/sf2_xt"
homepage = "https://github.com/xTibor/sf2_xt"
publish = false

[dependencies]
sf2_lib = { path = "../sf2_lib" }

itertools = "0.10.5"
memmap = "0.7.0"
