[package]
name = "sf2_lib"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "A zero-copy SoundFont parser library"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/sf2_xt"
homepage = "https://github.com/xTibor/sf2_xt"
publish = false

[dependencies]
zerocopy = "0.6.1"
