[package]
name = "sf2_xt_cli"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "Command-line tools for SoundFont files"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/sf2_xt"
homepage = "https://github.com/xTibor/sf2_xt"
publish = false

[dependencies]
sf2_xt_lib = { path = "../sf2_xt_lib" }

itertools = "0.12.0"
memmap = "0.7.0"
