[package]
name         = "impl-cli"
description  = "Command-line tools for SoundFont files"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
parser-riff = { workspace = true }
parser-sf2  = { workspace = true }

# common workspace dependencies
itertools = { workspace = true }
memmap    = { workspace = true }
