[package]
name         = "midi-defs"
description  = "MIDI data definitions"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
