[package]
name         = "parser-riff"
description  = "A zero-copy RIFF parser library"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
# common workspace dependencies
derive_more = { workspace = true }
