[package]
name         = "parser-sf2"
description  = "A zero-copy SoundFont parser library"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
parser-riff = { workspace = true }

# common workspace dependencies
derive_more = { workspace = true }
zerocopy    = { workspace = true }
