[package]
name         = "sf2_xt_cli"
description  = "Command-line tools for SoundFont files"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
sf2_xt_lib = { workspace = true }

# common workspace dependencies
itertools  = { workspace = true }
memmap     = { workspace = true }
