[package]
name         = "sf2_xt_gui"
description  = "SoundFont browser application"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
sf2_xt_lib = { workspace = true }

# common workspace dependencies
itertools  = { workspace = true }
memmap     = { workspace = true }

# egui dependencies
eframe         = { version = "0.24.0" }
egui_extras    = { version = "0.24.0" }
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt", features = ["filesystem", "ui"] }

# private dependencies
strum = { version = "0.25.0", features = ["derive"] }
