[package]
name         = "sf2_xt_lib"
description  = "A zero-copy SoundFont parser library"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
publish      = { workspace = true }

[dependencies]
# private dependencies
zerocopy = { version = "0.7.31", features = ["derive"] }
